fixed css to remove hamburger menu on mobile

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -116,94 +116,6 @@ text-align: center;
    color: #008ce5;
 }
 
- #hamburger-menu {
-  width: 25px;
-  height: 16px;
-  position: absolute;
-  top: 15px;
-  left: 15px;
-  -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  transform: rotate(0deg);
-  -webkit-transition: .5s ease-in-out;
-  -moz-transition: .5s ease-in-out;
-  -o-transition: .5s ease-in-out;
-  transition: .5s ease-in-out;
-  cursor: pointer;
-  display: none;
-}
-
- #hamburger-menu span {
-  display: block;
-  position: absolute;
-  height: 3px;
-  width: 100%;
-  background: #707070;
-  opacity: 1;
-  left: 0;
-  -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  transform: rotate(0deg);
-  -webkit-transition: .25s ease-in-out;
-  -moz-transition: .25s ease-in-out;
-  -o-transition: .25s ease-in-out;
-  transition: .25s ease-in-out;
-}
-
-
-
-#hamburger-menu span:nth-child(1) {
-  top: 0px;
-  -webkit-transform-origin: left center;
-  -moz-transform-origin: left center;
-  -o-transform-origin: left center;
-  transform-origin: left center;
-}
-
-#hamburger-menu span:nth-child(2) {
-  top: 8px;
-  -webkit-transform-origin: left center;
-  -moz-transform-origin: left center;
-  -o-transform-origin: left center;
-  transform-origin: left center;
-}
-
-#hamburger-menu span:nth-child(3) {
-  top: 16px;
-  -webkit-transform-origin: left center;
-  -moz-transform-origin: left center;
-  -o-transform-origin: left center;
-  transform-origin: left center;
-}
-
-#hamburger-menu.open span:nth-child(1) {
-  -webkit-transform: rotate(45deg);
-  -moz-transform: rotate(45deg);
-  -o-transform: rotate(45deg);
-  transform: rotate(45deg);
-}
-
-#hamburger-menu.open span:nth-child(2) {
-  width: 0%;
-  opacity: 0;
-}
-
-#hamburger-menu.open span:nth-child(3) {
-  -webkit-transform: rotate(-45deg);
-  -moz-transform: rotate(-45deg);
-  -o-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-  top:17px;
-}
-
-
-
-
-/*#nav li a:hover {
-   color: #008ce5;
-}*/
 
 
 /* =Main */
@@ -606,9 +518,7 @@ overflow: hidden;
 @media (max-width:768px){
   /* HOME768 */
 
-     #nav {
-        display: none;
-    }
+
     #fixed-angry-orchard > .content > a img:last-child {
         width: 80%;
         display: block;
@@ -676,9 +586,7 @@ overflow: hidden;
 
 @media (max-width:640px) {
 
-     #nav {
-        display: none;
-    }
+
   #fixed-angry-orchard > .content > a img:last-child {
     display: block;
   }
@@ -730,28 +638,22 @@ overflow: hidden;
 
 @media only screen and (max-width: 480px) {
     /* =Nav */
-    #nav {
-        top: 0 !important;
-        display: none;
-    }
 
-    #nav ul {
-      display: none;
-      padding: 20px 0;
-      width: 100%;
-      background-color: #fff;
-    }
-
-   #nav li {
-        padding: 5px;
+#nav {
+   padding: 20px 0;
+}
+#nav li {
+        padding: 0 5px;
         width: 100%;
-        display: block;;
     }
 
-    #hamburger-menu {
-      cursor: pointer;
-      display: block;
+
+ #nav li a {
+        padding: 5px;
+        font-size: 0.9em;
     }
+
+
     #home .mobile-footer {
         display: block;
     }
